[gd_scene load_steps=5 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]
[ext_resource path="res://Theme.theme" type="Theme" id=2]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.0531006, 0.298039, 0.679688, 1, 0.341176, 0.596078, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 600 )
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -341.0
margin_top = 60.0
margin_right = 341.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -239.5
margin_top = -61.7361
margin_right = 239.5
margin_bottom = -7.73581
custom_constants/separation = 106
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="HBoxContainer"]
margin_right = 186.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="HBoxContainer"]
margin_left = 292.0
margin_right = 479.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 171.0
margin_top = -208.0
margin_right = -168.0
margin_bottom = 178.0
allow_reselect = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyNameEntry" type="LineEdit" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 171.0
margin_top = -116.0
margin_right = -168.0
margin_bottom = -79.0
placeholder_text = "Enter the name of the Lobby if you are hosting it!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -65.8914
margin_right = -9.0
margin_bottom = -5.89136
text = "START!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0271
margin_top = -61.8914
margin_right = 165.027
margin_bottom = -18.8914
text = "<< Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoButton" type="Button" parent="."]
margin_left = 24.0271
margin_top = 484.0
margin_right = 165.027
margin_bottom = 521.0
toggle_mode = true
text = "Info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -288.0
margin_top = 42.0
margin_right = 288.0
margin_bottom = 209.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 69.0
margin_top = 10.0
margin_right = -69.0
margin_bottom = -10.0
custom_colors/font_color = Color( 1, 0.184314, 0.184314, 1 )
text = "Now give the link popped-up at the bottom right hand corner of this page to those who want to play with you and ask them to open the link in a browser and join by pressing \"Join\"."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionPanel" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="HBoxContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="HBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="InfoButton" to="." method="_on_InfoButton_toggled"]
[connection signal="popup_hide" from="Info" to="." method="_on_Info_popup_hide"]
